--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
 }
 .barrazul{
+    width: 100%;
     background-color: rgb(32, 108, 223);
     color: white;
     display: flex;
