--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -2,8 +2,22 @@ body{
     margin: 0;
 }
 .barrazul{
+    align-items: center;
     width: 100%;
     background-color: rgb(32, 108, 223);
     color: white;
     display: flex;
+}
+#imagem-tres-barras{
+    filter: invert(100%) ;
+    padding-left: 20px;
+    padding-right: 15px;
+    width: 28px;
+    height: 28px;
+}
+#imagem-maior-que{
+    filter: invert(100%);
+    padding-left: 10px;
+    width: 10px;
+    height: 15px;
 }
