--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -8,16 +8,34 @@ body{
     color: white;
     display: flex;
 }
-#imagem-tres-barras{
+.imagem-tres-barras{
     filter: invert(100%) ;
     padding-left: 20px;
     padding-right: 15px;
     width: 28px;
     height: 28px;
 }
-#imagem-maior-que{
+.imagem-maior-que{
     filter: invert(100%);
     padding-left: 10px;
+    padding-right: 10px;
     width: 10px;
     height: 15px;
+}
+.user{
+    padding-left: 90px;
+    filter: invert(100%);
+    width: 20px;
+    height: 20px;
+}
+.engrenagem{
+    filter: invert(100%);
+    padding-left: 15px;
+    width: 20px;
+    height: 20px;
+}
+.centralizar-div{
+    display: flex; 
+    justify-content: center; /*alinha a div filha no centro horizontal */
+    align-items: center; /* alinha a div filha no centrovertical */
 }
