--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -30,12 +30,20 @@ body{
 }
 .engrenagem{
     filter: invert(100%);
-    padding-left: 15px;
+    padding-left: 20px;
     width: 20px;
     height: 20px;
 }
 .centralizar-div{
+    background-color: white;
+    width: 100%;
+    height: 700px;
     display: flex; 
     justify-content: center; /*alinha a div filha no centro horizontal */
-    align-items: center; /* alinha a div filha no centrovertical */
+    align-items: center; /* alinha a div filha no centro vertical */
+}
+.div-centralizada{
+    background-color: #EFEFEF;
+    width: 300px;
+    height: 400px;
 }
