--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -47,3 +47,16 @@ body{
     width: 300px;
     height: 400px;
 }
+.barrazul-entrar{
+    align-items: center;
+    width: 100%;
+    background-color: rgb(32, 108, 223);
+    color: white;
+    display: inline-block;
+}
+#login{
+    text-align: center;
+}
+.campo-registro{
+    border-radius: 20%;
+}
