--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -35,14 +35,26 @@ body{
     height: 20px;
 }
 .centralizar-div{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     width: 100%;
     height: 700px;
     display: flex; 
     justify-content: center; /*alinha a div filha no centro horizontal */
     align-items: center; /* alinha a div filha no centro vertical */
 }
-
+.div-centralizada{
+    text-align: center;
+    width: 300px;
+    height: 400px;
+    background-color: #EFEFEF;
+}
+.barrazul-entrar{
+    align-items: center;
+    width: 100%;
+    background-color: rgb(32, 108, 223);
+    color: white;
+    display: inline-block;
+}
 #fundoCinza{
     height: 135px;
     width: 100%;
