--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -91,3 +91,21 @@ body{
     text-align: center;
     margin: 0% 5% 0% 5%;
 }
+.entrar{
+    background-color: white;
+    border-radius: 20px;
+}
+
+#meinho{
+    text-align: center;
+}
+
+.imagem-entrar{
+    width: 18px;
+    height: 20px;
+}
+
+.usuario{
+    width: 20px;
+    height: 20px;
+}
