--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -50,10 +50,16 @@ body{
 }
 .barrazul-entrar{
     align-items: center;
-    width: 100%;
+    width: 300px;
+    height: 60px;
     background-color: rgb(32, 108, 223);
     color: white;
     display: inline-block;
+}
+.fonte-entrar{
+    font-size: 21px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 #fundoCinza{
     height: 135px;
