--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -94,6 +94,8 @@ body{
     margin: 0% 5% 0% 5%;
 }
 .entrar{
+    font-size: 20px;
+    width: 100px;
     background-color: white;
     border-radius: 20px;
 }
@@ -115,4 +117,28 @@ body{
 .vermelho{
     height: 20%;
     background-color: FA0000;
+}
+.espacamento-login{
+    margin-top: 20%;
+}
+.campo-registro{
+    border-radius: 10px;
+    border-color: gray;
+    border-width: 1px;
+}
+#recuperar-senha{
+    width: 270px;
+    font-size: 14px;
+    color: rgb(32, 108, 223);
+}
+.botao-registro{
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    border-color: gray;
+    border-width: 1px;
+}
+#nao-login{
+    font-size: 14px;
+    color: rgb(32, 108, 223);
 }
