--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -180,6 +180,7 @@ body{
     margin-top: 5%;
     font-size: 20px;
     width: 140px;
+    border-radius: 20px;
 }
 .campo-registro{
     border-radius: 10px;
