--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -155,9 +155,12 @@ body{
 }
 
 .vermelho{
-    height: 20%;
-    background-color: FA0000;
+    text-align: center;
+    margin-top: 10%;
+    height: 120px;
+    background-color: #F86D6D;
 }
+
 .usuario{
     width: 20px;
     height: 20px;
@@ -186,4 +189,64 @@ body{
     border-radius: 10px;
     border-color: gray;
     border-width: 1px;
+}
+
+.series{
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    top: 22%;
+    left: 23%;
+}
+
+#negs{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 120%;
+}
+
+#pare{
+    width: 40%;
+    height: auto;
+}
+
+#parando{
+    position: relative;
+    top: -85%;
+    right: 23%;   
+}
+
+.amarelo{
+    text-align: center;
+    margin-top: 17%;
+    height: 120px;
+    background-color: #FFCC00;
+}
+
+#cicli{
+    width: 70%;
+    height: auto;
+}
+
+#ciclando{
+    position: relative;
+    top: -83%;
+    right: 22%;  
+}
+
+.verde{
+    text-align: center;
+    margin-top: 17%;
+    height: 120px;
+    background-color: #5EDC46;
+}
+
+#eptrans{
+    width: 50%;
+    height: auto;
+}
+
+#eptrando{
+    position: relative;
+    top: -70%;
+    right: 22%;  
 }
