--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -7,6 +7,8 @@ body{
     background-color: rgb(32, 108, 223);
     color: white;
     display: flex;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 .imagem-tres-barras{
     filter: invert(100%) ;
@@ -22,11 +24,17 @@ body{
     width: 10px;
     height: 15px;
 }
-.user{
+.usuario-branco{
     padding-left: 90px;
-    filter: invert(100%);
     width: 20px;
     height: 20px;
+    filter: invert(100%);
+}
+.usuario-branco-cadastro{
+    padding-left: 150px;
+    width: 20px;
+    height: 20px;
+    filter: invert(100%);
 }
 .engrenagem{
     filter: invert(100%);
@@ -44,7 +52,7 @@ body{
 }
 .centralizar-div2{
     width: 350px;
-    height: 285px;
+    height: 300px;
     background-color: rgb(233, 233, 233);
     border-radius: 10px;
 }
@@ -53,12 +61,11 @@ body{
     justify-content: center; /*alinha a div filha no centro horizontal */
     align-items: center; /* alinha a div filha no centrovertical */
     height: 800px;
-    width: 430px;
+    width: 100%;
 }
 .Jogo{
     height: 200px;
     width: 337px;
-    padding-left: 7px;
     padding-top: 5px;
     border-radius: 10px;
 }
@@ -74,13 +81,14 @@ body{
     src: url(Kanit-Regular.ttf);
 }
 
-.TextJogo{
-    font-family: kanit;
-    font-size: 22px;
-    padding-left: 108px ;
+.TextoJogo{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding-left: 20%;
 }
 
-.BarraTextJogo{
+.BarraTextoJogo{
     width: 430px;
     background-color: rgb(233, 233, 233);
 }
@@ -127,19 +135,19 @@ body{
     position: relative;
 }
 
-#welcome{
+.bem-vindo{
     font-family: Kanit-bold;
     font-size: 150%;
 }
 
 @font-face {
     font-family: Kanit-bold;
-    src: url(../css/Kanit-Bold.ttf);
+    src: url(../style/Kanit-Bold.ttf);
 }
 
 @font-face {
     font-family: Kanit;
-    src: url(../css/Kanit-Regular.ttf);
+    src: url(../style/Kanit-Regular.ttf);
 }
 
 #posi{
@@ -249,4 +257,56 @@ body{
     position: relative;
     top: -70%;
     right: 22%;  
+}
+#absoluta{
+    width: 75%;
+    height: 122%;
+    position: absolute;
+    top:0.1%;
+    background-color: rgb(32, 108, 223);
+}
+.texto-menu-select{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+.texto-menu{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(199, 194, 194);
+}
+.menu-suspenso{
+    margin-left: 20%;
+}
+#barra-menu{
+    margin-top: 187%;
+}
+.flexivel{
+    display: flex;
+    align-items: center;
+}
+.engrenagem-menu{
+    padding-right: 5%;
+    filter: invert(80%);
+    padding-left: 20px;
+    width: 20px;
+    height: 20px;
+}
+#barrazul-menu{
+    align-items: center;
+    width: 100%;
+    background-color: rgb(32, 108, 223);
+    color: white;
+    display: flex;
+}
+.imagem-tres-barras-menu{
+    filter: invert(100%) ;
+    padding-left: 20px;
+    padding-right: 15px;
+    width: 28px;
+    height: 28px;
+    padding-top: 3%;
+}
+#Transparente{
+    filter: opacity(52%);
 }
