--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -186,6 +186,7 @@ body{
     font-size: 20px;
     width: 100px;
     border-radius: 20px;
+    border-width: 1px;
 }
 #cadastrar{
     margin-top: 5%;
