--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
 }
-.barrazul{
+.barra-navegacao{
     align-items: center;
     width: 100%;
     background-color: rgb(32, 108, 223);
@@ -30,7 +30,7 @@ body{
     height: 20px;
     filter: invert(100%);
 }
-.usuario-branco-cadastro{
+.usuario-branco-login{
     padding-left: 150px;
     width: 20px;
     height: 20px;
@@ -50,7 +50,7 @@ body{
     justify-content: center; /*alinha a div filha no centro horizontal */
     align-items: center; /* alinha a div filha no centro vertical */
 }
-.centralizar-div2{
+.centralizar-animacao{
     width: 350px;
     height: 300px;
     background-color: rgb(233, 233, 233);
@@ -116,13 +116,13 @@ body{
     height: 400px;
     background-color: #EFEFEF;
 }
-.barrazul-entrar{
+.barrazul-entrar{ /*fundo do titulo cadastro e login*/
     align-items: center;
     width: 300px;
     height: 60px;
     background-color: rgb(32, 108, 223);
     color: white;
-    display: inline-block;
+    display: inline-block; 
 }
 .fonte-entrar{
     font-size: 21px;
@@ -150,7 +150,7 @@ body{
     src: url(../style/Kanit-Regular.ttf);
 }
 
-#posi{
+#posicao-bemvindo{
     position: absolute;
     top: 9%;
     left: 16%;
@@ -169,7 +169,7 @@ body{
     background-color: #F86D6D;
 }
 
-.usuario{
+.icones{
     width: 20px;
     height: 20px;
 }
