alterando nomes de tela de inicio para se adequar às boas práticas

--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -150,7 +150,7 @@ body{
     src: url(../style/Kanit-Regular.ttf);
 }
 
-#posicaoCabecalho{
+#posicaoCabecalho{ /* REVISAR */
     position: absolute;
     top: 9%;
     left: 16%;
