--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -129,7 +129,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
-#fundoCinza{
+.fundoCinza{
     height: 135px;
     width: 100%;
     position: relative;
@@ -150,19 +150,19 @@ body{
     src: url(../style/Kanit-Regular.ttf);
 }
 
-#posicaoCabecalho{ /* REVISAR */
+.posicaoCabecalho{
     position: absolute;
     top: 9%;
     left: 16%;
 }
 
-#textoIntroducao{
+.textoIntroducao{
     font-family: kanit;
     text-align: center;
     margin: 0% 5% 0% 5%;
 }
 
-.fundoVermelho{
+.deixarFundoVermelho{
     text-align: center;
     margin-top: 10%;
     height: 120px;
@@ -179,7 +179,7 @@ body{
 .textos-azuis{
     color: rgb(32, 108, 223);
 }
-.logo{
+.logo-prefeitura{
     width: 400px;
 }
 .entrar{
