--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -508,3 +508,9 @@ body{
     position: relative;
     bottom: 25px;
 }
+#usuario_branco_7erros_ajustar{
+    padding-left: 28px;
+    width: 20px;
+    height: 20px;
+    filter: invert(100%);
+}
