--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -30,6 +30,12 @@ body{
     height: 20px;
     filter: invert(100%);
 }
+.usuario_branco_inicio{
+    padding-left: 155px;
+    width: 20px;
+    height: 20px;
+    filter: invert(100%);
+}
 .usuario_branco_login{
     padding-left: 150px;
     width: 20px;
@@ -494,17 +500,41 @@ body{
 }
 .placas{
     height: 120%;
-    padding-left: 2%;
+    padding-left: 10%;
     position: relative;
     bottom: 10px;
 }
 .series_branco{
     text-align: center;
     color: white;
+    padding-left: 60px;
 }
 #placa_ciclista{
-    height: 180px;
+    height: 200px;
     width: auto;
     position: relative;
-    bottom: 25px;
+    bottom: 40px;
+    padding-left: 30px;
+}
+.series_branco_vermelho{
+    text-align: center;
+    color: white;
+    padding-left: 60px;
+    padding-top: 8px;
+    padding-left: 110px;
+}
+.series_branco_amarelo{
+    text-align: center;
+    color: white;
+    padding-left: 60px;
+    padding-top: 8px;
+    padding-left: 55px;
+    color: black;
+    font-weight: bold;
+}
+.placa_voce_esta_no_eptran{
+    height: 140px;
+    padding-left: 10%;
+    position: relative;
+    bottom: 10px;
 }
