--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -30,6 +30,13 @@ body{
     height: 20px;
     filter: invert(100%);
 }
+
+#usuario_branco_series{
+    padding-left: 5%;
+    width: 20px;
+    height: 20px;
+    filter: invert(100%);
+}
 .usuario_branco_login{
     padding-left: 150px;
     width: 20px;
@@ -79,24 +86,6 @@ body{
 @font-face {
     font-family: kanit;
     src: url(Kanit-Regular.ttf);
-}
-
-.texto_jogo{
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    padding-left: 20%;
-}
-
-.barra_texto_jogo{
-    width: 430px;
-    background-color: rgb(233, 233, 233);
-}
-.tamanho_ideal_controle{
-    height: 40px;
-    width: 40px;
-    padding-left: 10px;
-    padding-top: 18px;
 }
 .tamanho_ideal_expandir{
     height: 40px;
@@ -507,4 +496,10 @@ body{
     width: auto;
     position: relative;
     bottom: 25px;
+}
+
+.jogo_cinza{
+    background-color: #f2f2f2;
+    width: 100%;
+    height: 480px;
 }
