--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -36,6 +36,12 @@ body{
     height: 20px;
     filter: invert(100%);
 }
+#usuario_branco_ensino_medio{
+    padding-left: 30px;
+    width: 20px;
+    height: 20px;
+    filter: invert(100%);
+}
 .engrenagem{
     filter: invert(100%);
     padding-left: 20px;
