--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -540,7 +540,7 @@ body{
     background-color: #f2f2f2;
     width: 100%;
     height: 480px;
-    text-align: center;
+    text-align: center; /* alinha horizontalmente */
 }
 
 #usuario_branco_series{
@@ -554,9 +554,34 @@ body{
     width: 200px;
     height: 200px;
     padding-right: 500px;
+    padding-top: 45px;
 }
-
 #ideia{
     width: 80px;
+    height: 100px;
+    padding-right: 300px;
+}
+.botao_ensino_medio{
+    display: flex;
+    justify-content: center;
+    padding-top: 25%;
+}
+#imagens_jogo_ensino_medio{
+    display: flex;
+}
+#homem_escolhendo{
+    padding-top: 42px;
+    width: 200px;
+    height: 200px;
+
+}
+#icone_certo{
+    padding-top: 50px;
+    width: 120px;
+    height: 110px;
+}
+#icone_errado{
+    padding-top: 50px;
+    width: 120px;
     height: 100px;
 }
