--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -348,7 +348,7 @@ body{
     width: 100%;
 }
 .display_footer{
-    height: 110px;
+    height: 120px;
     display: flex;
 }
 .botao_entrar { /* Botão animado, para login e cadastro, é um código open source  retirado do site: uiverse*/
@@ -635,11 +635,20 @@ body{
 #mulherMedrosa{
     width: 200px;
     height: auto;
-    margin-top: 56%;
+    margin-top: 10%;
 }
 
 
-#atencao{
+#atencaoSF{
     width: 150px;
     height: auto;
+    margin-left: 15%;
+    margin-bottom: 20%;
 }
+
+.botao_SF{
+    display: flex;
+    justify-content: center;
+    padding-top: 35%;
+}
+
