--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -549,7 +549,7 @@ body{
     bottom: 10px;
 }
 #usuario_branco_7erros_ajustar{
-    padding-left: 28px;
+    padding-left: 105px;
     width: 20px;
     height: 20px;
     filter: invert(100%);
@@ -558,7 +558,6 @@ body{
 .jogo_cinza{
     font-size: 30px;
     font-family: roboto;
-    font-weight: bold;
     background-color: #f2f2f2;
     width: 100%;
     height: 480px;
@@ -566,6 +565,7 @@ body{
 }
 .subtitulo_jogos{
     font-size: 18px;
+    font-family: roboto;
 }
 #usuario_branco_series{
     padding-left: 5%;
@@ -609,37 +609,37 @@ body{
     height: 100px;
 }
 
-#fundoCinzaJogoSF{
+#fundo_cinza_jogo_SF{
     width: 2000px;
     background-color: #f2f2f2;
     height: 550px;
     border-radius: 3%;
 }
 
-#tituloEsubtitulo{
+#titulo_e_subtitulo{
     text-align: center;
     margin-top: 5%;
 }
 
-#tituloSF{
+#titulo_SF{
     font-family: roboto-black;
     word-break: normal;
     font-size: 27px;
 }
 
-#subtituloSF{
+#subtitulo_SF{
     margin: 1%;
     font-family: roboto;
 }
 
-#mulherMedrosa{
+#mulher_medrosa{
     width: 200px;
     height: auto;
     margin-top: 10%;
 }
 
 
-#atencaoSF{
+#atencao_SF{
     width: 150px;
     height: auto;
     margin-left: 15%;
@@ -652,3 +652,7 @@ body{
     padding-top: 35%;
 }
 
+.links_barra{
+    color: white;
+    text-decoration: none;
+}
