--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -28,6 +28,8 @@ body{
 }
 
 .barra_navegacao{
+    justify-content: space-between;
+    display: flex;
     align-items: center;
     width: 100%;
     background-color: #05466c;
@@ -51,7 +53,6 @@ body{
     height: 15px;
 }
 .usuario_branco{
-    padding-left: 90px;
     width: 20px;
     height: 20px;
     filter: invert(100%);
@@ -160,11 +161,12 @@ body{
     background-repeat: no-repeat;
 }
 #capa_inicio{
+    width: 100%;
     height: 120px;
     display: flex;
     background-image: url(../imagens/capa.jpg);
-    justify-content: center;
-    flex-wrap: nowrap;
+    background-repeat:round;
+    justify-content: center;    
     align-items: center;
 }
 #titulo_cabecalho{
@@ -575,8 +577,9 @@ body{
 }
 
 #menina_pensativa{
-    width: 200px;
-    height: 186px;
+    padding-top: 10px;
+    width: 175px;
+    height: 190px;
     padding-right: 500px;
 }
 #ideia{
@@ -593,8 +596,8 @@ body{
     display: flex;
 }
 #homem_escolhendo{
-    padding-top: 42px;
-    width: 200px;
+    padding-top: 12%;
+    width: 170px;
     height: 200px;
 
 }
@@ -655,4 +658,11 @@ body{
 .links_barra{
     color: white;
     text-decoration: none;
+}
+.icones_direita{
+    padding-right: 3%;
+}
+.elementos_esquerda{
+    align-items: center;
+    display: flex;
 }
